Fix page header top/bottom spacing
Fixes https://github.com/maithemewp/mai-engine/issues/186

--- a/assets/scss/components/header/_page-header.scss
+++ b/assets/scss/components/header/_page-header.scss
@@ -18,7 +18,7 @@
 
 	> .wrap {
 		z-index: 2;
-		padding: var(--page-header-padding, (10vw 0));
+		padding: var(--page-header-padding, var(--page-header-padding-top, 10vw) var(--page-header-padding-sides, 0) var(--page-header-padding-bottom, 10vw));
 	}
 }
 
